test/ppx_repr/deriver/errors/unsupported_type_open_polyvariant.ml
type t = [> `On | `Off ] [@@deriving repr]
